tests/errors/08_array_out_of_bounds.f
      PROGRAM ARRAY_OOB
      INTEGER A(3)
      PRINT *, A(4)
      END
